# Bootcamp_Python_Backend

./: README.md  conta_bancaria.py  conta_bancaria_v1.py  conta_bancaria_v3.py
Desafio_Conta_Bancaria/: conta_bancaria_v1.py
Desafio_Conta_Bancaria_Funcoes/: conta_bancaria_v2.py
Desafio_Conta_Bancaria_POO/: conta_bancaria_v3.py
Projeto_Api_RestFull/: alembic.ini  comandos_api.txt  requirements.txt
Projeto_Api_RestFull/alembic/: env.py
Projeto_Api_RestFull/alembic/versions/: 3234b42f3e0a_init_db.py
Projeto_Api_RestFull/workout_api/: pyproject.toml  requirements.txt
Projeto_Api_RestFull/workout_api/atleta/: controller.py  schemas.py
Projeto_Api_RestFull/workout_api/categorias/: controller.py
Projeto_Api_RestFull/workout_api/centro_treinamento/: controller.py
Projeto_Api_RestFull/workout_api/contrib/: schemas.py
Projeto_Api_TDD/: pyproject.toml
Projeto_Api_TDD/store_api-main/: pyproject.toml
Projeto_Api_TDD/store_api-main/store/: main.py
Projeto_Api_TDD/store_api-main/store/controllers/: product.py
Projeto_Api_TDD/store_api-main/tests/: conftest.py
Projeto_Api_TDD/store_api-main/tests/controllers/: test_product.py
