[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["marcovins <marcosbelods@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
pydantic = "^2.7.1"
fastapi-pagination = "^0.12.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
